css/main.css
html {
    box-sizing: border-box;
}

*,
*:before,
*:after {
    box-sizing: inherit;
}

body {
    margin: 0;
    padding: 0;
    background: #050505 url(../img/img01.jpg) repeat;
    font-family: Arial, Helvetica, sans-serif;
    font-size: 14px;
    color: #5B5B5B;
}

h1,
h2,
h3 {
    margin: 0;
    padding: 0;
    text-transform: uppercase;
    font-weight: normal;
    font-family: 'Oswald', sans-serif;
    font-weight: 200;
    color: #222222;
}

h1 {
    font-size: 2em;
}

h2 {
    font-size: 2.8em;
}

h3 {
    font-size: 1.6em;
}

p,
ul,
ol {
    margin-top: 0;
    line-height: 180%;
}

a {
    color: #5E5E5E;
}

#wrapper {
    background: #FFFFFF url(../img/img05.jpg) repeat;
}

.container {
    max-width: 1000px;
    margin: 0px auto;
}

/* Header */

#header-wrapper {
    overflow: hidden;
}

#header {
    height: 150px;
    margin: 0 auto;
    padding: 0px 0px;
}

/* Logo */

#logo {
    float: left;
    width: 300px;
    margin: 0;
    padding: 0;
    color: #FFFFFF;
}

#logo h1 {
    line-height: 120px;
    letter-spacing: -2px;
    font-size: 3.8em;
}

#logo h1 a {
    color: #1F1F1F;
    text-shadow: 1px 1px 0px rgba(0,0,0,.2);
}

#logo a {
    border: none;
    background: none;
    text-decoration: none;
    color: #000000;
}

/* Menu */

#menu {
    height: 90px;
    margin: 0 auto;
    padding: 0;
}

#menu ul {
    margin: 0;
    padding: 20px 0px 0px 0px;
    list-style: none;
    line-height: normal;
}

#menu a {
    display: block;
    line-height: 100px;
    margin-right: 1px;
    padding: 0px 20px 0px 20px;
    text-decoration: none;
    text-align: center;
    text-shadow: 1px 1px 0px rgba(0,0,0,.2);
    text-transform: uppercase;
    font-family: 'Oswald', sans-serif;
    font-size: 16px;
    font-weight: 300;
    color: #1F1F1F;
    border: none;
}

#menu a:hover, #menu .current_page_item a {
    background: url(../img/img01.jpg) repeat;
    text-decoration: none;
    color: #FFFFFF;
}

/* Page */

#page {
    margin: 0 auto;
    padding: 30px 0;
}

.post {
    overflow: hidden;
    margin-bottom: 40px;
    border-bottom: 1px solid #E7EBED;
}

.post .title {
    padding: 7px 0px 0px 0px;
    letter-spacing: -1px;
}

.post .title a {
    border: none;
    text-decoration: none;
    color: #222222;
}

.post .meta {
    margin-bottom: 30px;
    padding: 10px 0px 0px 0px;
    text-align: left;
    font-family: 'Abel', sans-serif;
    font-size: 16px;
    font-weight: 300;
}

.post .meta .date {
    float: left;
}

.post .meta .posted {
    float: right;
}

.post .entry {
    padding: 0px 0px 40px 0px;
    text-align: justify;
}

.links {
    padding-top: 20px;
    margin-bottom: 30px;
}

.more {
    display: block;
    float: left;
    width: 88px;
    padding: 5px 5px;
    margin-right: 10px;
    background: #222222;
    color: #FFFFFF;
    text-align: center;
    text-decoration: none;
}

.comments {
    display: block;
    float: left;
    width: 88px;
    padding: 5px 5px;
    background: #222222;
    color: #FFFFFF;
    text-align: center;
    text-decoration: none;
}

/* Sidebar */

#sidebar {
    margin: 0px;
    padding: 30px 0px 0px 0px;
}

#sidebar ul {
    margin: 0;
    padding: 0;
    list-style: none;
}

#sidebar li {
    margin: 0;
    padding: 0;
}

#sidebar li ul {
    margin: 0px 0px;
    padding-bottom: 30px;
}

#sidebar li li {
    line-height: 40px;
    border-bottom: 1px solid #E7EBED;
    margin: 0px 0px;
    border-left: none;
}

#sidebar li li span {
    display: block;
    margin-top: -20px;
    padding: 0;
    font-size: 11px;
    font-style: italic;
}

#sidebar li li a {
    padding: 0px 0px 0px 20px;
    background: url(../img/img04.jpg) no-repeat left 50%;
}

#sidebar h2 {
    height: 38px;
    padding: 0px 0px 30px 0px;
    letter-spacing: -.5px;
    font-size: 1.8em;
    color: #222222;
}

#sidebar p {
    margin: 0 0px;
    padding: 0px 30px 20px 30px;
    text-align: justify;
}

#sidebar a {
    border: none;
}

#sidebar a:hover {
    text-decoration: underline;
}

/* Footer */

#footer {
    height: 140px;
    margin: 0 auto;
    padding: 50px 0 15px 0;
    font-family: 'Abel', sans-serif;
}

#footer p {
    margin: 0;
    padding-top: 10px;
    letter-spacing: 1px;
    line-height: normal;
    font-size: 14px;
    text-transform: uppercase;
    text-align: center;
    color: #5E5E5E;
}

#footer a {
    color: #5E5E5E;
}

#banner {
    margin: 0px auto;
    background: url(../img/img03.png) no-repeat left bottom;
}

#banner img {
    width: 100%;
    height: auto;
}

